@@ -1,0 +1,54 @@
+/*
+ * Copyright (c) 2015 embedded brains GmbH.  All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ * 1. Redistributions of source code must retain the above copyright
+ *    notice, this list of conditions and the following disclaimer.
+ * 2. Redistributions in binary form must reproduce the above copyright
+ *    notice, this list of conditions and the following disclaimer in the
+ *    documentation and/or other materials provided with the distribution.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+ * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+ * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+ * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
+ * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+ * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
+ * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+ * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
+ * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+ * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
+ * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ */
+
+#ifndef _MACHINE__THREADS_H_
+#define	_MACHINE__THREADS_H_
+
+#include <machine/_default_types.h>
+#include <sys/lock.h>
+
+typedef struct _Condition_Control cnd_t;
+
+typedef struct _Mutex_recursive_Control mtx_t;
+
+/* pthread_t */
+typedef __uint32_t thrd_t;
+
+/* pthread_key_t */
+typedef __uint32_t tss_t;
+
+/* pthread_once_t */
+typedef struct {
+	int	_is_initialized;
+	int	_init_executed;
+} once_flag;
+
+/* PTHREAD_ONCE_INIT */
+#define	ONCE_FLAG_INIT { 1, 0 }
+
+/* PTHREAD_DESTRUCTOR_ITERATIONS */
+#define	TSS_DTOR_ITERATIONS 4
+
+#endif /* _MACHINE__THREADS_H_ */
