@@ -1,5 +1,10 @@
 2015-10-13  Sebastian Huber  <sebastian.huber@embedded-brains.de>
 
+	* libc/include/threads.h: New.
+	* libc/sys/rtems/include/machine/_threads.h: Likewise.
+
+2015-10-13  Sebastian Huber  <sebastian.huber@embedded-brains.de>
+
 	* libc/include/sys/cdefs.h: Synchronize with latest FreeBSD
 	version.
 
